--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/banking
-    username: me
-    password: me
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://localhost:5432/banking
+#    username: me
+#    password: me
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/banking
+    username: root
+    password: password
   flyway:
     enabled: true
   jpa:
